syntax = "proto3";

// See https://www.ibm.com/docs/en/zos-basic-skills?topic=layer-transmission-control-protocol-tcp
package grpc;

option go_package = "transport/grpc/grpcpb";

service Grpc {
    // TODO выбрать другое название для сокета. Так как это название будет использоваться для передачи данных без проверки потерь
    rpc Socket(stream SocketMessage) returns (stream SocketMessage);
    rpc Call(CallRequest) returns (CallResponse);

}

message SocketMessage {
    uint32 SequenceNumber = 1; 
    uint32 AcknowledgmentNumber = 2;
    bytes Data = 3; // TODO probe proto.Any
}

message CallRequest {
    bytes Data = 1;
}

message CallResponse {
    bytes Data = 1;
}
